rancher.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Metadata": {
        "AWS::CloudFormation::Designer": {
            "02d851e4-1f20-44fe-970f-1a340f6107d5": {
                "size": {
                    "width": 2130,
                    "height": 810
                },
                "position": {
                    "x": 430,
                    "y": 130
                },
                "z": 1,
                "embeds": [
                    "99ea1797-8aa1-4271-a6df-e5a4f56fb21b",
                    "e9387ad6-af3c-433a-86c9-0cb078dc5333",
                    "1144dc09-8bf3-4d80-adfd-800ccd417da3",
                    "537ac2d3-a160-46b4-acfc-ada228486971",
                    "b1078d9d-5a65-43a7-8659-bcce54968f23",
                    "00967b5c-827d-4568-bca0-1b28d56a2bbe"
                ]
            },
            "99ea1797-8aa1-4271-a6df-e5a4f56fb21b": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 490,
                    "y": 160
                },
                "z": 2,
                "parent": "02d851e4-1f20-44fe-970f-1a340f6107d5",
                "embeds": []
            },
            "00967b5c-827d-4568-bca0-1b28d56a2bbe": {
                "size": {
                    "width": 180,
                    "height": 90
                },
                "position": {
                    "x": 490,
                    "y": 280
                },
                "z": 2,
                "parent": "02d851e4-1f20-44fe-970f-1a340f6107d5",
                "embeds": [],
                "dependson": [
                    "b1078d9d-5a65-43a7-8659-bcce54968f23",
                    "537ac2d3-a160-46b4-acfc-ada228486971"
                ]
            },
            "fe119076-9864-4b1a-a45b-a8ab3bc9e0bf": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe"
                },
                "target": {
                    "id": "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                },
                "z": 2
            },
            "b1078d9d-5a65-43a7-8659-bcce54968f23": {
                "size": {
                    "width": 840,
                    "height": 300
                },
                "position": {
                    "x": 940,
                    "y": 190
                },
                "z": 2,
                "parent": "02d851e4-1f20-44fe-970f-1a340f6107d5",
                "embeds": [
                    "717cfe05-6547-40a5-882b-c74b4c8f6f0a"
                ],
                "dependson": [
                    "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                ]
            },
            "e5a1794d-e5b6-4544-acd1-4ffaf47ba048": {
                "source": {
                    "id": "b1078d9d-5a65-43a7-8659-bcce54968f23"
                },
                "target": {
                    "id": "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                },
                "z": 2
            },
            "8e2c713d-fb0a-4173-abce-50372c05c035": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe"
                },
                "target": {
                    "id": "b1078d9d-5a65-43a7-8659-bcce54968f23"
                },
                "z": 3
            },
            "537ac2d3-a160-46b4-acfc-ada228486971": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 1030,
                    "y": 310
                },
                "z": 2,
                "parent": "02d851e4-1f20-44fe-970f-1a340f6107d5",
                "embeds": []
            },
            "e933f949-1211-4354-8875-c175a8752483": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe"
                },
                "target": {
                    "id": "537ac2d3-a160-46b4-acfc-ada228486971"
                },
                "z": 2
            },
            "b3f91c94-1763-4227-9cf7-d4a04eab99a7": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe",
                    "selector": "g:nth-child(1) g:nth-child(5) g:nth-child(1) circle:nth-child(1)     ",
                    "port": "AWS::DependencyLink-*"
                },
                "target": {
                    "id": "537ac2d3-a160-46b4-acfc-ada228486971"
                },
                "z": 3
            },
            "fd09aacc-f8a9-4bf1-aecd-d599a15c50f9": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe",
                    "selector": "g:nth-child(1) g:nth-child(5) g:nth-child(1) circle:nth-child(1)     ",
                    "port": "AWS::DependencyLink-*"
                },
                "target": {
                    "id": "537ac2d3-a160-46b4-acfc-ada228486971"
                },
                "z": 3
            },
            "57fe7d40-fe3a-47d6-85e5-624620d0d0c6": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe",
                    "selector": "g:nth-child(1) g:nth-child(5) g:nth-child(1) circle:nth-child(1)     ",
                    "port": "AWS::DependencyLink-*"
                },
                "target": {
                    "id": "537ac2d3-a160-46b4-acfc-ada228486971"
                },
                "z": 3
            },
            "a390da28-61a6-44dd-8570-fa5101cf162a": {
                "source": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe",
                    "selector": "g:nth-child(1) g:nth-child(5) g:nth-child(1) circle:nth-child(1)     ",
                    "port": "AWS::DependencyLink-*"
                },
                "target": {
                    "id": "537ac2d3-a160-46b4-acfc-ada228486971"
                },
                "z": 3
            },
            "1144dc09-8bf3-4d80-adfd-800ccd417da3": {
                "size": {
                    "width": 270,
                    "height": 270
                },
                "position": {
                    "x": 490,
                    "y": 400
                },
                "z": 2,
                "parent": "02d851e4-1f20-44fe-970f-1a340f6107d5",
                "embeds": [
                    "48138d59-b61c-4080-9d6e-65fe2eeae65b"
                ],
                "dependson": [
                    "e9387ad6-af3c-433a-86c9-0cb078dc5333"
                ]
            },
            "e9387ad6-af3c-433a-86c9-0cb078dc5333": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 1030,
                    "y": 370
                },
                "z": 2,
                "parent": "02d851e4-1f20-44fe-970f-1a340f6107d5",
                "embeds": []
            },
            "34ad0c88-0fe7-4876-a875-f4265482d117": {
                "source": {
                    "id": "1144dc09-8bf3-4d80-adfd-800ccd417da3"
                },
                "target": {
                    "id": "e9387ad6-af3c-433a-86c9-0cb078dc5333"
                },
                "z": 2
            },
            "de83b63b-2ca8-44b0-9bfe-67a91eb47d74": {
                "source": {
                    "id": "b1078d9d-5a65-43a7-8659-bcce54968f23"
                },
                "target": {
                    "id": "1144dc09-8bf3-4d80-adfd-800ccd417da3"
                },
                "z": 1
            },
            "5a319605-ab45-4917-a7a8-64804f3e44cc": {
                "source": {
                    "id": "b1078d9d-5a65-43a7-8659-bcce54968f23"
                },
                "target": {
                    "id": "00967b5c-827d-4568-bca0-1b28d56a2bbe"
                },
                "z": 1
            },
            "717cfe05-6547-40a5-882b-c74b4c8f6f0a": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 1540,
                    "y": 310
                },
                "z": 3,
                "parent": "b1078d9d-5a65-43a7-8659-bcce54968f23",
                "embeds": [],
                "references": [
                    "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                ],
                "dependson": [
                    "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                ]
            },
            "c3f1de15-498c-4404-8114-564ff92bbcf2": {
                "source": {
                    "id": "717cfe05-6547-40a5-882b-c74b4c8f6f0a"
                },
                "target": {
                    "id": "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                },
                "z": 2
            },
            "48138d59-b61c-4080-9d6e-65fe2eeae65b": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 520,
                    "y": 460
                },
                "z": 3,
                "parent": "1144dc09-8bf3-4d80-adfd-800ccd417da3",
                "embeds": [],
                "isassociatedwith": [
                    "e9387ad6-af3c-433a-86c9-0cb078dc5333"
                ]
            },
            "52e4bdf5-0d39-485e-affe-21c397226310": {
                "source": {
                    "id": "99ea1797-8aa1-4271-a6df-e5a4f56fb21b"
                },
                "target": {
                    "id": "02d851e4-1f20-44fe-970f-1a340f6107d5"
                },
                "z": 1
            }
        }
    },
    "Parameters": {
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
        },
        "InstanceType": {
            "Description": "WebServer EC2 instance type",
            "Type": "String",
            "Default": "t2.micro",
            "AllowedValues": [
                "t1.micro",
                "t2.nano",
                "t2.micro",
                "t2.small",
                "t2.medium",
                "t2.large",
                "m1.small",
                "m1.medium",
                "m1.large",
                "m1.xlarge",
                "m2.xlarge",
                "m2.2xlarge",
                "m2.4xlarge",
                "m3.medium",
                "m3.large",
                "m3.xlarge",
                "m3.2xlarge",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m4.10xlarge",
                "c1.medium",
                "c1.xlarge",
                "c3.large",
                "c3.xlarge",
                "c3.2xlarge",
                "c3.4xlarge",
                "c3.8xlarge",
                "c4.large",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c4.8xlarge",
                "g2.2xlarge",
                "g2.8xlarge",
                "r3.large",
                "r3.xlarge",
                "r3.2xlarge",
                "r3.4xlarge",
                "r3.8xlarge",
                "i2.xlarge",
                "i2.2xlarge",
                "i2.4xlarge",
                "i2.8xlarge",
                "d2.xlarge",
                "d2.2xlarge",
                "d2.4xlarge",
                "d2.8xlarge",
                "hi1.4xlarge",
                "hs1.8xlarge",
                "cr1.8xlarge",
                "cc2.8xlarge",
                "cg1.4xlarge"
            ],
            "ConstraintDescription": "must be a valid EC2 instance type."
        }
    },
    "Resources": {
        "RancherVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "RancherCloudFormation"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "NATGateway1EIP" : {
            "Type" : "AWS::EC2::EIP",
            "Properties" : {
                "Domain" : "RancherVPC"
            }
        },
        "NATGateway1" : {
            "Type" : "AWS::EC2::NatGateway",
            "DependsOn" : "GatewayToInternet",
            "Properties" : {
                "AllocationId" : {
                    "Fn::GetAtt" : [
                        "NATGateway1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId" : {
                    "Ref" : "WebSubnet"
                }
            }
        },
        "PrivateRoute1" : {
            "Type" : "AWS::EC2::Route",
            "Properties" : {
                "RouteTableId" : {
                    "Ref" : "PrivateRouteTable1"
                },
                "DestinationCidrBlock" : "0.0.0.0/0",
                "NatGatewayId" : {
                    "Ref" : "NATGateway1"
                }
            }
        },
        "PrivateRouteTable1": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
                "Tags": [
                 {
                  "Key": "Name",
                  "Value": "Private Route Table"
                 }
                 ]
            }
        },
        "RancherAdminEC2": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "RancherAdmin"
                    }
                ],
                "KeyName": {
                    "Ref": "KeyName"
                },
               "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
                     "#!/bin/bash -xe\n",
                     "sudo mkdir -p /usr/local/etc/nginx/ssl\n",
                     "# Create the SSH keys \n",
                     "cd /usr/local/etc/nginx/ssl\n",
                     "sudo openssl req -x509 -nodes -subj \"/C=US/ST=GA/L=Atlanta/O=BPE/CN=rancher-dev.bpe.com\" -new -newkey rsa:4096 -keyout rancher.key -out rancher.crt -days 365\n",
                     "cd /home/ubuntu\n",
                     "git clone https://github.com/polinchw/rancher-ssl.git\n",
                     "cd /home/ubuntu/rancher-ssl\n",
                     "docker-compose build\n",
                     "docker-compose up -d\n"
                 ]]}},
                "ImageId": "ami-ca71f4b0",
                "NetworkInterfaces" : [{
                 "AssociatePublicIpAddress" : "True",
                 "DeleteOnTermination" : "True",
                 "SubnetId" : { "Ref" : "RancherAdminSubnet" },
                 "DeviceIndex" : "0",
                 "GroupSet" : [ { "Ref" : "RancherAdminSecurityGroup" } ]
                 }]
            }
        },
        "InternetGW": {
            "Type": "AWS::EC2::InternetGateway",
           "Properties": {
              "Tags": [
               {
                 "Key": "Name",
                 "Value": "Internet Gateway"
               }
               ]
           }
        },
        "GatewayToInternet": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGW"
                }
            }
        },
        "WebSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
                "CidrBlock": "10.0.0.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WebSubnet"
                    }
                ]
            },
            "DependsOn": [
                "PublicRouteTable",
                "WebSecurityGroup"
            ]
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
              "Tags": [
                {
                  "Key": "Name",
                  "Value": "Public Route Table"
                }
              ]
            }
        },
        "PublicSubnetRouteTableAssociation1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "WebSubnet"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PublicSubnetRouteTableAssociation2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "RancherAdminSubnet"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
       "PrivateSubnetRouteTableAssociation1": {
         "Type": "AWS::EC2::SubnetRouteTableAssociation",
         "Properties": {
          "SubnetId": {
            "Ref": "AppSubnet"
          },
          "RouteTableId": {
            "Ref": "PrivateRouteTable1"
          }
         }
        },
        "WebSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
                "GroupDescription": "Allows traffic from the public internet.",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WebSecurityGroup"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "500",
                        "ToPort": "500",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "4500",
                        "ToPort": "4500",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "5000",
                        "ToPort": "5000",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "9200",
                        "ToPort": "9200",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "9300",
                        "ToPort": "9300",
                        "CidrIp": "10.0.0.0/16"
                    }
                ]
            }
        },
        "RancherAdminSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
                "CidrBlock": "10.0.1.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "RancherAdminSubnet"
                    }
                ]
            },
            "DependsOn": [
                "RancherAdminSecurityGroup"
            ]
        },
      "AppSubnet": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "RancherVPC"
          },
          "CidrBlock": "10.0.2.0/24",
          "Tags": [
            {
              "Key": "Name",
              "Value": "AppSubnet"
            }
          ]
        },
        "DependsOn": [
          "AppSecurityGroup",
          "PrivateRouteTable1"
        ]
      },
      "RancherAdminSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "RancherVPC"
                },
                "GroupDescription": "Allows traffic from the public internet to the Rancher GUI",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "RancherSecurityGroup"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "500",
                        "ToPort": "500",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "4500",
                        "ToPort": "4500",
                        "CidrIp": "10.0.0.0/16"
                    }
                ]
            }
        },
      "AppSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "VpcId": {
            "Ref": "RancherVPC"
          },
          "GroupDescription": "Allows traffic from the web subnet",
          "Tags": [
            {
              "Key": "Name",
              "Value": "AppSecurityGroup"
            }
          ],
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": "8000",
              "ToPort": "9000",
              "CidrIp": "10.0.0.0/24"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": "22",
              "ToPort": "22",
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGW"
                }
            },
            "DependsOn": [
                "InternetGW"
            ]
        }
    }
}
